poc/tests/errors/test_FplVariableAlreadyDeclared_ir_01.fpl
Test.Namespace
{
    inference
    {
        Test(x: Nat)
        {
            x: Nat
            pre: True
            con: True
        }
    }

    theory {}

}

##############################

FplVariableAlreadyDeclared:7:13: The name 'x' was already declared in the current context at (5,14)